<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright 2020 Nicholas Hochstetler
  ~  You may not use this file except in compliance with the Apache License
  ~  Version 2.0, obtainable at http://www.apache.org/licenses/LICENSE-2.0
  ~  or in the file LICENSE in the project's root directory. -->

<merge
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:layout_height="wrap_content"
    tools:parentTag="androidx.constraintlayout.widget.ConstraintLayout"
    tools:style="@style/RecyclerViewItemStyle" >

    <Space
        android:id="@+id/amountEditSpacer"
        android:layout_width="40dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        tools:visibility="gone" />

    <com.cliffracermerchant.bootycrate.TintableCheckbox
        android:id="@+id/checkBox"
        android:layout_width="44dp"
        android:layout_height="44dp"
        app:layout_constraintEnd_toStartOf="@id/nameEdit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:tint="@color/colorInBetweenPrimaryAccent1"
        style="@style/ViewModelItemColorEdit" />

    <com.cliffracermerchant.bootycrate.AnimatedStrikeThroughTextFieldEdit
        android:id="@+id/nameEdit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/checkBox"
        app:layout_constraintEnd_toStartOf="@id/amountEdit"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/extraInfoEdit"
        app:layout_goneMarginBottom="3dp"
        tools:text="Item Name"
        tools:layout_height="@dimen/text_field_edit_editable_min_height"
        style="@style/ViewModelItemNameEdit" />

    <com.cliffracermerchant.bootycrate.AnimatedStrikeThroughTextFieldEdit
        android:id="@+id/extraInfoEdit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="1dp"
        app:layout_constraintEnd_toEndOf="@id/nameEdit"
        app:layout_constraintStart_toStartOf="@id/nameEdit"
        app:layout_constraintTop_toBottomOf="@id/nameEdit"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:text="Extra info"
        tools:layout_height="@dimen/text_field_edit_editable_min_height"
        style="@style/ViewModelItemExtraInfoEdit" />

    <com.cliffracermerchant.bootycrate.IntegerEdit
        android:id="@+id/amountEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/nameEdit"
        app:layout_constraintEnd_toStartOf="@id/amountEditSpacer"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/ViewModelItemAmountEdit" />

    <ImageButton
        android:id="@+id/editButton"
        android:layout_width="40dp"
        android:layout_height="44dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:contentDescription="@string/edit_button_description"
        style="@style/ViewModelItemEditButton" />

    <ImageButton
        android:id="@+id/linkIndicator"
        android:layout_width="44dp"
        android:layout_height="44dp"
        app:layout_constraintStart_toEndOf="@id/extraInfoEdit"
        app:layout_constraintEnd_toStartOf="@id/editButton"
        app:layout_constraintTop_toBottomOf="@id/amountEdit"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="gone"
        tools:visibility="visible"
        android:contentDescription="@string/link_status_description"
        style="@style/ShoppingListItemLinkIndicator" />

</merge>