...
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="12dp"
        android:background="?android:attr/listDivider"
        android:backgroundTint="?android:attr/textColorPrimary"
        app:layout_constraintTop_toBottomOf="@id/colorEdit"
        app:layout_constraintBottom_toTopOf="@id/addToShoppingListCheckBox"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <CheckBox
        android:id="@+id/addToShoppingListCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="44dp"
        android:minLines="2"
        android:text="@string/add_to_shopping_list_checkbox_text"
        app:layout_constraintEnd_toStartOf="@id/addToShoppingListTriggerEdit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider"
        android:layout_marginStart="2dp"

        android:textSize="14sp" />

...
